--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
+    "ts-node": "^10.9.2",
+    "tsx": "4.19.4",
     "zod": "3.21.4"
   },
   "devDependencies": {
@@ -49,8 +51,8 @@
     "prettier-plugin-tailwindcss": "^0.2.8",
     "prisma": "4.14.0",
     "prisma-kysely": "1.5.0",
-    "tailwindcss": "3.3.0",
     "sql-formatter": "12.2.3",
+    "tailwindcss": "3.3.0",
     "typescript": "5.0.4",
     "vitest": "0.33.0"
   },
